--- a/code/building-a-serverless-api-with-nodejs-and-aws-aurora-serverless/serverless.yml
+++ b/code/building-a-serverless-api-with-nodejs-and-aws-aurora-serverless/serverless.yml
@@ -101,6 +101,41 @@ functions:
           path: tags/{id}
           method: delete
           cors: true
+  tagRelationCreate:
+    handler: handler.tagRelationCreate
+    events:
+      - http:
+          path: tagRelations
+          method: post
+          cors: true
+  tagRelationGetOne:
+    handler: handler.tagRelationGetOne
+    events:
+      - http:
+          path: tagRelations/{id}
+          method: get
+          cors: true
+  tagRelationGetAll:
+    handler: handler.tagRelationGetAll
+    events:
+      - http:
+          path: tagRelations
+          method: get
+          cors: true
+  tagRelationUpdate:
+    handler: handler.tagRelationUpdate
+    events:
+      - http:
+          path: tagRelations/{id}
+          method: put
+          cors: true
+  tagRelationDestroy:
+    handler: handler.tagRelationDestroy
+    events:
+      - http:
+          path: tagRelations/{id}
+          method: delete
+          cors: true
 
 plugins:
   - serverless-offline
