--- a/code/building-a-serverless-api-with-nodejs-and-aws-aurora-serverless/serverless.yml
+++ b/code/building-a-serverless-api-with-nodejs-and-aws-aurora-serverless/serverless.yml
@@ -136,6 +136,41 @@ functions:
           path: tagRelations/{id}
           method: delete
           cors: true
+  collectionCreate:
+    handler: handler.collectionCreate
+    events:
+      - http:
+          path: collections
+          method: post
+          cors: true
+  collectionGetOne:
+    handler: handler.collectionGetOne
+    events:
+      - http:
+          path: collections/{id}
+          method: get
+          cors: true
+  collectionGetAll:
+    handler: handler.collectionGetAll
+    events:
+      - http:
+          path: collections
+          method: get
+          cors: true
+  collectionUpdate:
+    handler: handler.collectionUpdate
+    events:
+      - http:
+          path: collections/{id}
+          method: put
+          cors: true
+  collectionDestroy:
+    handler: handler.collectionDestroy
+    events:
+      - http:
+          path: collections/{id}
+          method: delete
+          cors: true
 
 plugins:
   - serverless-offline
