Added the notion of ressource to allow sharing between collection and tag

--- a/code/building-a-serverless-api-with-nodejs-and-aws-aurora-serverless/serverless.yml
+++ b/code/building-a-serverless-api-with-nodejs-and-aws-aurora-serverless/serverless.yml
@@ -171,6 +171,41 @@ functions:
           path: collectionRelations/{id}
           method: delete
           cors: true
+  ressourceCreate:
+    handler: handler.ressourceCreate
+    events:
+      - http:
+          path: ressources
+          method: post
+          cors: true
+  ressourceGetOne:
+    handler: handler.ressourceGetOne
+    events:
+      - http:
+          path: ressources/{id}
+          method: get
+          cors: true
+  ressourceGetAll:
+    handler: handler.ressourceGetAll
+    events:
+      - http:
+          path: ressources
+          method: get
+          cors: true
+  ressourceUpdate:
+    handler: handler.ressourceUpdate
+    events:
+      - http:
+          path: ressources/{id}
+          method: put
+          cors: true
+  ressourceDestroy:
+    handler: handler.ressourceDestroy
+    events:
+      - http:
+          path: ressources/{id}
+          method: delete
+          cors: true
 
 plugins:
   - serverless-offline
