Added generated docs to / route

--- a/code/ressource-relation-api/serverless.yml
+++ b/code/ressource-relation-api/serverless.yml
@@ -25,7 +25,7 @@ provider:
 
 functions:
   healthCheck:
-    handler: handler.healthCheck
+    handler: handler.docs
     events:
       - http:
           path: /
