--- a/code/ressource-relation-api/package.json
+++ b/code/ressource-relation-api/package.json
@@ -14,6 +14,7 @@
     "serverless-offline": "^3.33.0"
   },
   "dependencies": {
+    "apidoc-sequelize-generator": "^1.0.5",
     "mysql2": "^1.7.0",
     "sequelize": "^4.44.3"
   }
