WIP: abstract relation route

--- a/code/ressource-relation-api/serverless.yml
+++ b/code/ressource-relation-api/serverless.yml
@@ -251,6 +251,8 @@ functions:
           path: communitys
           method: post
           cors: true
+    environment:
+      table: "12345678"
   communityGetOne:
     handler: /handlers/Community.communityGetOne
     events:
