--- a/code/ressource-relation-api/serverless.yml
+++ b/code/ressource-relation-api/serverless.yml
@@ -6,7 +6,7 @@ custom:
 provider:
   name: aws
   region: ${self:custom.secrets.REGION}
-  runtime: nodejs10.x
+  runtime: nodejs12.x
   timeout: 30
   stage: ${self:custom.secrets.NODE_ENV}
   environment:
@@ -296,7 +296,7 @@ functions:
       TABLE_NAME: "CommunityUserRelation"
       FK_NAME_1: "CommunityId"
       FK_NAME_2: "UserId"
-
+  #
   collectionRessourceRelationCreate:
     handler: /handlers/Relation.relationCreate
     events:
@@ -304,6 +304,8 @@ functions:
           path: collectionRessourceRelations
           method: post
           cors: true
+    environment:
+      TABLE_NAME: "CollectionRessourceRelation"
   collectionRessourceRelationGetOne:
     handler: /handlers/Relation.relationGetOne
     events:
@@ -312,9 +314,9 @@ functions:
           method: get
           cors: true
     environment:
-      TABLE_NAME: "CommunityUserRelation"
-      FK_NAME_1: "collectionId"
-      FK_NAME_2: "ressourceId"
+      TABLE_NAME: "CollectionRessourceRelation"
+      FK_NAME_1: "CollectionId"
+      FK_NAME_2: "RessourceId"
   collectionRessourceRelationGetAll:
     handler: /handlers/Relation.relationGetAll
     events:
@@ -322,6 +324,8 @@ functions:
           path: collectionRessourceRelations
           method: get
           cors: true
+    environment:
+      TABLE_NAME: "CollectionRessourceRelation"
   collectionRessourceRelationUpdate:
     handler: /handlers/Relation.relationUpdate
     events:
@@ -330,9 +334,9 @@ functions:
           method: put
           cors: true
     environment:
-      TABLE_NAME: "CommunityUserRelation"
-      FK_NAME_1: "collectionId"
-      FK_NAME_2: "ressourceId"
+      TABLE_NAME: "CollectionRessourceRelation"
+      FK_NAME_1: "CollectionId"
+      FK_NAME_2: "RessourceId"
   collectionRessourceRelationDestroy:
     handler: /handlers/Relation.relationDestroy
     events:
@@ -341,9 +345,61 @@ functions:
           method: delete
           cors: true
     environment:
-      TABLE_NAME: "CommunityUserRelation"
-      FK_NAME_1: "collectionId"
-      FK_NAME_2: "ressourceId"
+      TABLE_NAME: "CollectionRessourceRelation"
+      FK_NAME_1: "CollectionId"
+      FK_NAME_2: "RessourceId"
+  #
+  collectionCollectionRelationCreate:
+    handler: /handlers/Relation.relationCreate
+    events:
+      - http:
+          path: collectionCollectionRelations
+          method: post
+          cors: true
+    environment:
+      TABLE_NAME: "CollectionCollectionRelation"
+  collectionCollectionRelationGetOne:
+    handler: /handlers/Relation.relationGetOne
+    events:
+      - http:
+          path: collectionCollectionRelations/{parentId}/{childId}
+          method: get
+          cors: true
+    environment:
+      TABLE_NAME: "CollectionCollectionRelation"
+      FK_NAME_1: "ParentId"
+      FK_NAME_2: "ChildId"
+  collectionCollectionRelationGetAll:
+    handler: /handlers/Relation.relationGetAll
+    events:
+      - http:
+          path: collectionCollectionRelations
+          method: get
+          cors: true
+    environment:
+      TABLE_NAME: "CollectionCollectionRelation"
+  collectionCollectionRelationUpdate:
+    handler: /handlers/Relation.relationUpdate
+    events:
+      - http:
+          path: collectionCollectionRelations/{parentId}/{childId}
+          method: put
+          cors: true
+    environment:
+      TABLE_NAME: "CollectionCollectionRelation"
+      FK_NAME_1: "ParentId"
+      FK_NAME_2: "ChildId"
+  collectionCollectionRelationDestroy:
+    handler: /handlers/Relation.relationDestroy
+    events:
+      - http:
+          path: collectionCollectionRelations/{parentId}/{childId}
+          method: delete
+          cors: true
+    environment:
+      TABLE_NAME: "CollectionCollectionRelation"
+      FK_NAME_1: "ParentId"
+      FK_NAME_2: "ChildId"
 
 plugins:
   - serverless-offline
