optimise per function

--- a/code/ressource-relation-api/api/tag/serverless.yml
+++ b/code/ressource-relation-api/api/tag/serverless.yml
@@ -31,6 +31,9 @@ provider:
       - ${self:custom.secrets.SUBNET1_ID}
       - ${self:custom.secrets.SUBNET2_ID}
 
+package:
+  individually: true
+
 functions:
   tagCreate:
     handler: handler.tagCreate
